fix(pbrs): canonical mode disables additives; migrate prev_potential API

--- a/ReforceXY/reward_space_analysis/tests/.docstring_template.md
+++ b/ReforceXY/reward_space_analysis/tests/.docstring_template.md
@@ -99,12 +99,12 @@ def test_pbrs_terminal_state_comprehensive(self):
        - Assert: next_potential ≈ 0 within TOLERANCE.IDENTITY_RELAXED
 
     2. Part B: Shaping recovery verification
-       - Verify: reward_shaping ≈ -gamma * last_potential
-       - Checks proper potential recovery mechanism
+       - Verify: reward_shaping ≈ -prev_potential (canonical exit)
+       - Checks proper potential release at terminal
 
-    3. Part C: Cumulative drift analysis
+    3. Part C: Cumulative shaping magnitude
        - Track cumulative shaping over 100-episode sequence
-       - Assert: Bounded drift (no systematic bias accumulation)
+       - Assert: Bounded magnitude (no systematic bias accumulation)
 
     **Setup:**
     - Exit modes: [progressive_release, spike_cancel, canonical]
@@ -114,8 +114,8 @@ def test_pbrs_terminal_state_comprehensive(self):
 
     **Assertions:**
     - Terminal potential: |next_potential| < TOLERANCE.IDENTITY_RELAXED
-    - Shaping recovery: |shaping + gamma*last_pot| < TOLERANCE.IDENTITY_RELAXED
-    - Cumulative drift: |sum(shaping)| < 10 * TOLERANCE.IDENTITY_RELAXED
+    - Shaping recovery: |shaping + prev_potential| < TOLERANCE.IDENTITY_RELAXED
+    - Cumulative sum bound: |sum(shaping)| < 10 * TOLERANCE.IDENTITY_RELAXED
 
     **Tolerance rationale:**
     - IDENTITY_RELAXED: PBRS calculations involve gamma discounting,
