fix(ReforceXY): fix off-by-one in PBRS next state duration computation
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/ReforceXY/reward_space_analysis/tests/.docstring_template.md
+++ b/ReforceXY/reward_space_analysis/tests/.docstring_template.md
@@ -199,13 +199,12 @@ def test_property_holds_for_all_inputs(self):
 ### Regression Test
 
 ```python
-def test_bug_fix_issue_123_no_regression(self):
+def test_issue_123_regression_is_prevented(self):
     """Regression test for Issue #123: [brief description].
 
-    Ensures fix for [bug description] remains effective.
-    Bug manifested when [conditions]; this test reproduces those conditions.
+    Validates behavior for [conditions] and asserts the expected outcome.
 
-    **Fixed in:** PR #456 (commit abc1234)
+    **Tracking:** Issue #123
     """
 ```
 
